Added transparency correction to EcalLaserDbService.  New analyzer and cfg files to setup this service.
Toyoko Orimoto
toyoko.orimoto@cern.ch
24 July 2007

--- a/test/test_ecallaserdb_2.cfg
+++ b/test/test_ecallaserdb_2.cfg
@@ -10,15 +10,15 @@ process TEST = {
     	include "CondCore/DBCommon/data/CondDBCommon.cfi"
 
 	include "Geometry/EcalMapping/data/EcalMapping.cfi"
-     	include "Geometry/CaloEventSetup/data/CaloGeometry.cfi"
-     	include "Geometry/CaloEventSetup/data/EcalTrigTowerConstituents.cfi"
-     	include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
-     	include "CalibCalorimetry/Configuration/data/Ecal_FakeConditions.cff"
+//     	include "Geometry/CaloEventSetup/data/CaloGeometry.cfi"
+//     	include "Geometry/CaloEventSetup/data/EcalTrigTowerConstituents.cfi"
+//     	include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
+//     	include "CalibCalorimetry/Configuration/data/Ecal_FakeConditions.cff"
 
 
 	module print = AsciiOutputModule { }
 	
-	module EcalLaserDbAnalyzer = EcalLaserDbAnalyzer {}
+	module EcalLaserTestAnalyzer = EcalLaserTestAnalyzer {}
 	
 	es_module = EcalLaserCorrectionService {}
 
@@ -63,8 +63,8 @@ process TEST = {
 	 string timetype = "runnumber"
 #         untracked uint32 firstRun = 11
 #	 untracked uint32 lastRun = 20
-         untracked uint32 firstRun = 30
-	 untracked uint32 lastRun = 30
+         untracked uint32 firstRun = 11
+	 untracked uint32 lastRun = 20
          uint32 interval = 1
 	}
 
@@ -94,7 +94,7 @@ process TEST = {
         }
 
 
-	path p = { get & print & EcalLaserDbAnalyzer}
+	path p = { get & print & EcalLaserTestAnalyzer}
 
 
 
