Included function in EcalLaserDbService which maps xtal <-> light module.
Toyoko Orimoto
toyoko.orimoto@cern.ch
30 July 2007

--- a/test/test_ecallaserdb_2.cfg
+++ b/test/test_ecallaserdb_2.cfg
@@ -24,14 +24,15 @@ process TEST = {
 
         replace CondDBCommon.connect = "oracle://cms_orcoff_int2r/CMS_ECAL_OFF_TEST"
         replace CondDBCommon.catalog = "relationalcatalog_oracle://cms_orcoff_int2r/CMS_ECAL_OFF_TEST"
-        replace CondDBCommon.DBParameters.authenticationPath="/afs/cern.ch/user/t/torimoto/scratch0/CMSSW/CMSSW_1_5_0/src/CondTools/Ecal/db_auth"    
+        replace CondDBCommon.DBParameters.authenticationPath="/afs/cern.ch/user/t/torimoto/scratch0/CMSSW/CMSSW_1_6_0_pre5/src/CondTools/Ecal/db_auth"    
 
 	es_source es_pool = PoolDBESSource { 
 	        using CondDBCommon
 	        VPSet toGet = {
 			 { 
 				string record = "EcalLaserAPDPNRatiosRcd" 
-				string tag = "EcalLaserAPDPNRatios_o2o" 
+#				string tag = "EcalLaserAPDPNRatios_o2o" 
+				string tag = "EcalLaserAPDPNRatios_csa07_Test10" 
 	 		},
 
    	            	{
@@ -63,8 +64,12 @@ process TEST = {
 	 string timetype = "runnumber"
 #         untracked uint32 firstRun = 11
 #	 untracked uint32 lastRun = 20
-         untracked uint32 firstRun = 11
-	 untracked uint32 lastRun = 11
+         untracked uint32 firstRun = 1
+	 untracked uint32 lastRun = 10
+#
+#	 string timetype = "timestamp"
+#         untracked uint32 firstTime = 4294967290
+#	 untracked uint32 lastTime  = 4294967295
          uint32 interval = 1
 	}
 
