--- a/test/test_ecallaserdb_2.cfg
+++ b/test/test_ecallaserdb_2.cfg
@@ -16,7 +16,7 @@ process TEST = {
 //     	include "CalibCalorimetry/Configuration/data/Ecal_FakeConditions.cff"
 
 
-	module print = AsciiOutputModule { }
+#	module print = AsciiOutputModule { }
 	
 	module EcalLaserTestAnalyzer = EcalLaserTestAnalyzer {}
 	
@@ -32,17 +32,17 @@ process TEST = {
 			 { 
 				string record = "EcalLaserAPDPNRatiosRcd" 
 #				string tag = "EcalLaserAPDPNRatios_o2o" 
-				string tag = "EcalLaserAPDPNRatios_csa07_Test10" 
+				string tag = "EcalLaserAPDPNRatios_csa07_Test12" 
 	 		},
 
    	            	{
        	                	string record = "EcalLaserAPDPNRatiosRefRcd"
-               	        	string tag = "EcalLaserAPDPNRatiosRef_master"
+               	        	string tag = "EcalLaserAPDPNRatiosRef_Test2"
 	               	},
 
                 	{
                       	  	string record = "EcalLaserAlphasRcd"
-                        	string tag = "EcalLaserAlphas_master"
+                        	string tag = "EcalLaserAlphas_Test2"
                 	}
 	
 		}
@@ -64,8 +64,8 @@ process TEST = {
 	 string timetype = "runnumber"
 #         untracked uint32 firstRun = 11
 #	 untracked uint32 lastRun = 20
-         untracked uint32 firstRun = 1
-	 untracked uint32 lastRun = 10
+         untracked uint32 firstRun = 2
+	 untracked uint32 lastRun = 2
 #
 #	 string timetype = "timestamp"
 #         untracked uint32 firstTime = 4294967290
@@ -99,7 +99,8 @@ process TEST = {
         }
 
 
-	path p = { get & print & EcalLaserTestAnalyzer}
+##	path p = { get & print & EcalLaserTestAnalyzer}
+	path p = { get & EcalLaserTestAnalyzer}
 
 
 
