global changes to cfg and py declaration of EmptyIOVSource to adapt to the new syntax (CMSSW savannah task 7959)

--- a/test/test_ecallasertrivial.cfg
+++ b/test/test_ecallasertrivial.cfg
@@ -19,19 +19,19 @@ process TEST = {
     // Empty event source
     source = EmptyIOVSource {
 #	 string timetype = "runnumber"
-#         untracked uint32 firstRun = 2
-#	 untracked uint32 lastRun = 2
-         uint32 interval = 1
+#         uint64 firstValue = 2
+#	 uint64 lastValue = 2
+         uint64 interval = 1
 	 string timetype = "timestamp"
-         untracked uint32 firstTime = 4294967290
-	 untracked uint32 lastTime  = 4294967295
+         uint64 firstValue = 4294967290
+	 uint64 lastValue  = 4294967295
 	}
 
 #    	source = EmptySource {
 #		string timetype = "runnumber"
-#         	untracked uint32 firstRun = 11
-#	 	untracked uint32 lastRun = 20
-#         	uint32 interval = 1
+#         	uint64 firstValue = 11
+#	 	uint64 lastValue = 20
+#         	uint64 interval = 1
 #	}
 #
         untracked PSet maxEvents = {untracked int32 input = 100}	
