--- a/test/test_ecallaserdb.cfg
+++ b/test/test_ecallaserdb.cfg
@@ -61,24 +61,24 @@ process TEST = {
     // Empty event source
     source = EmptyIOVSource {
 	 string timetype = "runnumber"
-#         untracked uint32 firstRun = 11
-#	 untracked uint32 lastRun = 20
-         untracked uint32 firstRun = 30
-	 untracked uint32 lastRun = 30
-         uint32 interval = 1
+#         uint64 firstValue = 11
+#	 uint64 lastValue = 20
+         uint64 firstValue = 30
+	 uint64 lastValue = 30
+         uint64 interval = 1
 	}
 
 #    	source = EmptySource {
 #		string timetype = "runnumber"
-#         	untracked uint32 firstRun = 11
-#	 	untracked uint32 lastRun = 20
-#         	uint32 interval = 1
+#         	uint64 firstValue = 11
+#	 	uint64 lastValue = 20
+#         	uint64 interval = 1
 #	}
 #
         untracked PSet maxEvents = {untracked int32 input = 100}	
 
 #	source = EmptySource {      #untracked int32 maxEvents = 20
-#                                    untracked uint32 firstRun = 1 
+#                                    uint64 firstValue = 1 
 #                                    untracked uint32 numberEventsInRun = 2 
 #                                   }
 
